--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "Moshe Kolodny",
   "license": "MIT",
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-babel": "^5.0.3",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "load-grunt-tasks": "^3.3.0",
     "mocha": "^2.2.4",
     "sinon": "^1.15.3"
   }
